Fix overflow issue

--- a/src/components/MainLayout/styles/MainLayout.module.css
+++ b/src/components/MainLayout/styles/MainLayout.module.css
@@ -1,6 +1,7 @@
 .container {
     min-height: 100vh;
     display: flex;
+    overflow: hidden;
 }
 
 .main {
