--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@ body {
     background-color: rgb(28, 27, 34);
     color: rgb(219, 223, 224);
     font-family: "Roboto", Arial, Helvetica, sans-serif;
-    overflow: hidden;
 }
 
 h1,
